refactor(i18n): enhance error messages and localization for user feedback
- Updated error messages in VerifyAdTokenUseCaseImpl to use localized keys.
- Refactored exception messages in ShortLink, User, and OriginalUrl entities to use consistent localization keys.
- Enhanced EmailService to support localized email content for verification and password reset.
- Modified AdController, AdminUserController, and other controllers to return localized success messages.
- Updated messages.properties and messages_vi.properties files with new keys for better localization support.
- Adjusted AuthUseCaseTest to accommodate changes in localized messages and ensure proper testing of new functionality.